@@ -55,14 +55,14 @@ import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.ParserConfigurationException;
 
 import megamek.Version;
-import megamek.common.Board;
-import megamek.common.Entity;
-import megamek.common.EquipmentType;
-import megamek.common.Game;
 import megamek.common.Player;
+import megamek.common.board.Board;
+import megamek.common.equipment.EquipmentType;
+import megamek.common.game.Game;
 import megamek.common.loaders.EntityLoadingException;
 import megamek.common.options.GameOptions;
 import megamek.common.options.OptionsConstants;
+import megamek.common.units.Entity;
 import mekhq.campaign.Campaign;
 import mekhq.campaign.Hangar;
 import mekhq.campaign.Quartermaster;
@@ -117,28 +117,28 @@ public class RefitTest {
         EquipmentType.initializeTypes();
     }
 
-        @BeforeEach
-        public void beforeEach() {
-            lenient().when(mockCampaign.getCampaignOptions()).thenReturn(mockCampaignOptions);
-            lenient().when(mockCampaignOptions.getCommonPartPriceMultiplier()).thenReturn(1d);
-            lenient().when(mockCampaignOptions.getInnerSphereUnitPriceMultiplier()).thenReturn(1d);
-            lenient().when(mockCampaignOptions.getInnerSpherePartPriceMultiplier()).thenReturn(1d);
-            double[] usedPartMultipliers = {1.0, 1.0, 1.0, 1.0, 1.0, 1.0};
-            lenient().when(mockCampaignOptions.getUsedPartPriceMultipliers()).thenReturn(usedPartMultipliers);
+    @BeforeEach
+    public void beforeEach() {
+        lenient().when(mockCampaign.getCampaignOptions()).thenReturn(mockCampaignOptions);
+        lenient().when(mockCampaignOptions.getCommonPartPriceMultiplier()).thenReturn(1d);
+        lenient().when(mockCampaignOptions.getInnerSphereUnitPriceMultiplier()).thenReturn(1d);
+        lenient().when(mockCampaignOptions.getInnerSpherePartPriceMultiplier()).thenReturn(1d);
+        double[] usedPartMultipliers = { 1.0, 1.0, 1.0, 1.0, 1.0, 1.0 };
+        lenient().when(mockCampaignOptions.getUsedPartPriceMultipliers()).thenReturn(usedPartMultipliers);
 
-            lenient().when(mockCampaign.getGame()).thenReturn(mockGame);
-            lenient().when(mockGame.getBoard()).thenReturn(mockBoard);
-            lenient().when(mockBoard.isSpace()).thenReturn(false);
-            lenient().when(mockGame.getOptions()).thenReturn(mockGameOptions);
-            lenient().when(mockGameOptions.booleanOption(OptionsConstants.ADVAERORULES_SINGLE_NO_CAP))
-                            .thenReturn(false);
-            lenient().when(mockGameOptions.booleanOption(OptionsConstants.ADVAERORULES_STRATOPS_CAPITAL_FIGHTER))
-                            .thenReturn(false);
+        lenient().when(mockCampaign.getGame()).thenReturn(mockGame);
+        lenient().when(mockGame.getBoard()).thenReturn(mockBoard);
+        lenient().when(mockBoard.isSpace()).thenReturn(false);
+        lenient().when(mockGame.getOptions()).thenReturn(mockGameOptions);
+        lenient().when(mockGameOptions.booleanOption(OptionsConstants.ADVANCED_AERO_RULES_SINGLE_NO_CAP))
+              .thenReturn(false);
+        lenient().when(mockGameOptions.booleanOption(OptionsConstants.ADVANCED_AERO_RULES_STRATOPS_CAPITAL_FIGHTER))
+              .thenReturn(false);
 
-            lenient().when(mockCampaign.getQuartermaster()).thenReturn(mockQuartermaster);
+        lenient().when(mockCampaign.getQuartermaster()).thenReturn(mockQuartermaster);
 
-            lenient().when(mockCampaign.getWarehouse()).thenReturn(mockWarehouse);
-        }
+        lenient().when(mockCampaign.getWarehouse()).thenReturn(mockWarehouse);
+    }
 
     @Test
     public void deserializationCtor() {
@@ -149,7 +149,7 @@ public class RefitTest {
     @Test
     public void newRefitCtor() {
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getLocustLCT1V();
+        Entity oldEntity = UnitTestUtilities.getLocustLCT1V();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -178,7 +178,7 @@ public class RefitTest {
     @Test
     public void locust1Vto1ETest() {
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getLocustLCT1V();
+        Entity oldEntity = UnitTestUtilities.getLocustLCT1V();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -238,7 +238,7 @@ public class RefitTest {
                     .filter(p -> (p instanceof AmmoBin) && p.getName().equals("Machine Gun Ammo [Full] Bin"))
                     .count());
 
-        // All of the new parts should be from the old unit
+        // All the new parts should be from the old unit
         List<Part> newParts = refit.getNewUnitParts();
         assertTrue(newParts.stream().allMatch(p -> p.getUnit().equals(oldUnit)));
 
@@ -257,7 +257,7 @@ public class RefitTest {
     @Test
     public void testLocust1Vto1EWriteToXml() throws ParserConfigurationException, SAXException, IOException {
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getLocustLCT1V();
+        Entity oldEntity = UnitTestUtilities.getLocustLCT1V();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -281,7 +281,7 @@ public class RefitTest {
 
         // Write the Refit XML
         StringWriter sw = new StringWriter();
-        PrintWriter  pw = new PrintWriter(sw);
+        PrintWriter pw = new PrintWriter(sw);
         refit.writeToXML(pw, 0);
 
         // Get the Refit XML
@@ -298,7 +298,7 @@ public class RefitTest {
         assertEquals("refit", refitElt.getNodeName());
 
         // Deserialize the refit
-        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit);
+        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit, true);
         assertNotNull(deserialized);
 
         // Spot check the values
@@ -333,7 +333,7 @@ public class RefitTest {
 
         // Check that we got all the shopping list entries (by name, not amazing but
         // reasonable)
-        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).collect(Collectors.toList());
+        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).toList();
         List<String> serializedShoppingList = deserialized.getShoppingList()
                                                     .stream()
                                                     .map(Part::getName)
@@ -351,22 +351,22 @@ public class RefitTest {
         assertTrue(serializedShoppingList.isEmpty());
 
         // Do the same for their descriptions, which include the quantities...
-        List<String> shoppingListDescs = Arrays.asList(refit.getShoppingListDescription());
+        List<String> shoppingListDescriptions = Arrays.asList(refit.getShoppingListDescription());
         // ... except the second list needs to be mutable.
-        List<String> serializedShoppingListDescs = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
+        List<String> serializedShoppingListDescriptions = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
 
-        assertEquals(shoppingListDescs.size(), serializedShoppingListDescs.size());
-        for (String desc : shoppingListDescs) {
-            assertTrue(serializedShoppingListDescs.remove(desc));
+        assertEquals(shoppingListDescriptions.size(), serializedShoppingListDescriptions.size());
+        for (String desc : shoppingListDescriptions) {
+            assertTrue(serializedShoppingListDescriptions.remove(desc));
         }
 
-        assertTrue(serializedShoppingListDescs.isEmpty());
+        assertTrue(serializedShoppingListDescriptions.isEmpty());
     }
 
     @Test
     public void javelinJVN10Nto10ATest() {
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getJavelinJVN10N();
+        Entity oldEntity = UnitTestUtilities.getJavelinJVN10N();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -426,7 +426,7 @@ public class RefitTest {
                     .filter(p -> (p instanceof AmmoBin) && p.getName().equals("SRM 6 Ammo Bin"))
                     .count());
 
-        // All of the new parts should be from the old unit
+        // All the new parts should be from the old unit
         List<Part> newParts = refit.getNewUnitParts();
         assertTrue(newParts.stream().allMatch(p -> p.getUnit().equals(oldUnit)));
 
@@ -445,11 +445,11 @@ public class RefitTest {
     @Test
     public void testJavelinJVN10Nto10AWriteToXml() throws ParserConfigurationException, SAXException, IOException {
         Person mockTech = mock(Person.class);
-        UUID   techId   = UUID.randomUUID();
+        UUID techId = UUID.randomUUID();
         when(mockTech.getId()).thenReturn(techId);
 
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getJavelinJVN10N();
+        Entity oldEntity = UnitTestUtilities.getJavelinJVN10N();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -475,7 +475,7 @@ public class RefitTest {
 
         // Write the Refit XML
         StringWriter sw = new StringWriter();
-        PrintWriter  pw = new PrintWriter(sw);
+        PrintWriter pw = new PrintWriter(sw);
         refit.writeToXML(pw, 0);
 
         // Get the Refit XML
@@ -492,7 +492,7 @@ public class RefitTest {
         assertEquals("refit", refitElt.getNodeName());
 
         // Deserialize the refit
-        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit);
+        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit, true);
         assertNotNull(deserialized);
 
         // Spot check the values
@@ -527,7 +527,7 @@ public class RefitTest {
 
         // Check that we got all the shopping list entries (by name, not amazing but
         // reasonable)
-        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).collect(Collectors.toList());
+        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).toList();
         List<String> serializedShoppingList = deserialized.getShoppingList()
                                                     .stream()
                                                     .map(Part::getName)
@@ -545,22 +545,22 @@ public class RefitTest {
         assertTrue(serializedShoppingList.isEmpty());
 
         // Do the same for their descriptions, which include the quantities...
-        List<String> shoppingListDescs = Arrays.asList(refit.getShoppingListDescription());
+        List<String> shoppingListDescriptions = Arrays.asList(refit.getShoppingListDescription());
         // ... except the second list needs to be mutable.
-        List<String> serializedShoppingListDescs = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
+        List<String> serializedShoppingListDescriptions = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
 
-        assertEquals(shoppingListDescs.size(), serializedShoppingListDescs.size());
-        for (String desc : shoppingListDescs) {
-            assertTrue(serializedShoppingListDescs.remove(desc));
+        assertEquals(shoppingListDescriptions.size(), serializedShoppingListDescriptions.size());
+        for (String desc : shoppingListDescriptions) {
+            assertTrue(serializedShoppingListDescriptions.remove(desc));
         }
 
-        assertTrue(serializedShoppingListDescs.isEmpty());
+        assertTrue(serializedShoppingListDescriptions.isEmpty());
     }
 
     @Test
     public void fleaFLE4toFLE15Test() {
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getFleaFLE4();
+        Entity oldEntity = UnitTestUtilities.getFleaFLE4();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -614,7 +614,7 @@ public class RefitTest {
         // + 1 facing change @ 120 mins ea
         // + 5 adds @ 120 mins ea
         // + 16 armor changes @ 5 mins ea
-        // x 8*0.5 = 4 (Class D with kit, camops)
+        // x 8*0.5 = 4 (Class D with kit, CamOps)
         assertEquals(((120.0 * 9.0) + (5.0 * 16.0)) * 4.0, refit.getActualTime(), 0.1);
 
         // Cost?
@@ -635,7 +635,7 @@ public class RefitTest {
                     .count());
         assertEquals(10, removedParts.stream().filter(p -> (p instanceof Armor)).count());
 
-        // All of the new parts should be from the old unit
+        // All the new parts should be from the old unit
         List<Part> newParts = refit.getNewUnitParts();
         assertTrue(newParts.stream().allMatch(p -> p.getUnit().equals(oldUnit)));
 
@@ -656,18 +656,18 @@ public class RefitTest {
 
         // We should have 16 points of standard armor on order
         assertNotNull(refit.getNewArmorSupplies());
-        assertEquals(refit.getNewArmorSupplies().getType(), EquipmentType.T_ARMOR_STANDARD);
+        assertEquals(EquipmentType.T_ARMOR_STANDARD, refit.getNewArmorSupplies().getType());
         assertEquals(16, refit.getNewArmorSupplies().getAmountNeeded());
     }
 
     @Test
     public void testFleaFLE4toFLE15WriteToXml() throws ParserConfigurationException, SAXException, IOException {
         Person mockTech = mock(Person.class);
-        UUID   techId   = UUID.randomUUID();
+        UUID techId = UUID.randomUUID();
         when(mockTech.getId()).thenReturn(techId);
 
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getFleaFLE4();
+        Entity oldEntity = UnitTestUtilities.getFleaFLE4();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -693,7 +693,7 @@ public class RefitTest {
 
         // Write the Refit XML
         StringWriter sw = new StringWriter();
-        PrintWriter  pw = new PrintWriter(sw);
+        PrintWriter pw = new PrintWriter(sw);
         refit.writeToXML(pw, 0);
 
         // Get the Refit XML
@@ -710,7 +710,7 @@ public class RefitTest {
         assertEquals("refit", refitElt.getNodeName());
 
         // Deserialize the refit
-        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit);
+        Refit deserialized = Refit.generateInstanceFromXML(refitElt, new Version(), mockCampaign, oldUnit, true);
         assertNotNull(deserialized);
         deserialized.reCalc();
 
@@ -746,7 +746,7 @@ public class RefitTest {
 
         // Check that we got all the shopping list entries (by name, not amazing but
         // reasonable)
-        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).collect(Collectors.toList());
+        List<String> shoppingList = refit.getShoppingList().stream().map(Part::getName).toList();
         List<String> serializedShoppingList = deserialized.getShoppingList()
                                                     .stream()
                                                     .map(Part::getName)
@@ -764,16 +764,16 @@ public class RefitTest {
         assertTrue(serializedShoppingList.isEmpty());
 
         // Do the same for their descriptions, which include the quantities...
-        List<String> shoppingListDescs = Arrays.asList(refit.getShoppingListDescription());
+        List<String> shoppingListDescriptions = Arrays.asList(refit.getShoppingListDescription());
         // ... except the second list needs to be mutable.
-        List<String> serializedShoppingListDescs = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
+        List<String> serializedShoppingListDescriptions = new ArrayList<>(Arrays.asList(deserialized.getShoppingListDescription()));
 
-        assertEquals(shoppingListDescs.size(), serializedShoppingListDescs.size());
-        for (String desc : shoppingListDescs) {
-            assertTrue(serializedShoppingListDescs.remove(desc));
+        assertEquals(shoppingListDescriptions.size(), serializedShoppingListDescriptions.size());
+        for (String desc : shoppingListDescriptions) {
+            assertTrue(serializedShoppingListDescriptions.remove(desc));
         }
 
-        assertTrue(serializedShoppingListDescs.isEmpty());
+        assertTrue(serializedShoppingListDescriptions.isEmpty());
 
         // Make sure the new armor is serialized/deserialized properly
         assertNotNull(deserialized.getNewArmorSupplies());
@@ -792,7 +792,7 @@ public class RefitTest {
         when(mockCampaign.getShoppingList()).thenReturn(mockShoppingList);
 
         // Create the original entity backing the unit
-        Entity oldEntity  = UnitTestUtilities.getHeavyTrackedApcMg();
+        Entity oldEntity = UnitTestUtilities.getHeavyTrackedApcMg();
         Player mockPlayer = mock(Player.class);
         when(mockPlayer.getName()).thenReturn("Test Player");
         oldEntity.setOwner(mockPlayer);
@@ -822,7 +822,7 @@ public class RefitTest {
                     .filter(p -> (p instanceof AmmoBin) && p.getName().equals("Machine Gun Ammo [Full] Bin"))
                     .count());
 
-        // All of the new parts (except ammo bins) should be from the old unit
+        // All the new parts (except ammo bins) should be from the old unit
         List<Part> newParts = refit.getNewUnitParts();
         assertTrue(newParts.stream().filter(p -> !(p instanceof AmmoBin)).allMatch(p -> p.getUnit().equals(oldUnit)));
 
@@ -841,86 +841,86 @@ public class RefitTest {
         assertNotNull(report);
     }
 
-        @Test
-        public void testMasakariAtoMasakariB() {
-            // Create the original entity backing the unit
-            Entity oldEntity = UnitTestUtilities.getMasakariWarhawkA();
-            Player mockPlayer = mock(Player.class);
-            when(mockPlayer.getName()).thenReturn("Test Player");
-            oldEntity.setOwner(mockPlayer);
+    @Test
+    public void testMasakariAtoMasakariB() {
+        // Create the original entity backing the unit
+        Entity oldEntity = UnitTestUtilities.getMasakariWarhawkA();
+        Player mockPlayer = mock(Player.class);
+        when(mockPlayer.getName()).thenReturn("Test Player");
+        oldEntity.setOwner(mockPlayer);
 
-            // Create the entity we're going to refit to
-            Entity newEntity = UnitTestUtilities.getMasakariWarhawkB();
+        // Create the entity we're going to refit to
+        Entity newEntity = UnitTestUtilities.getMasakariWarhawkB();
 
-            // Create the unit which will be refit
-            Unit oldUnit = new Unit(oldEntity, mockCampaign);
-            oldUnit.setId(UUID.randomUUID());
-            oldUnit.initializeParts(false);
+        // Create the unit which will be refit
+        Unit oldUnit = new Unit(oldEntity, mockCampaign);
+        oldUnit.setId(UUID.randomUUID());
+        oldUnit.initializeParts(false);
 
-            // Create the Refit
-            Refit refit = new Refit(oldUnit, newEntity, false, false, false);
-            assertEquals(mockCampaign, refit.getCampaign());
+        // Create the Refit
+        Refit refit = new Refit(oldUnit, newEntity, false, false, false);
+        assertEquals(mockCampaign, refit.getCampaign());
 
-            // Omni reconfiguration
-            assertEquals(Refit.CLASS_OMNI, refit.getRefitClass());
+        // Omni reconfiguration
+        assertEquals(Refit.CLASS_OMNI, refit.getRefitClass());
 
-            // Time?
-            // Omni reconfig = 120 minutes here
-            assertEquals(120.0, refit.getActualTime(), 0.1);
+        // Time?
+        // Omni reconfig = 120 minutes here
+        assertEquals(120.0, refit.getActualTime(), 0.1);
 
-            // Cost?
-            assertEquals(Money.of(316000).multipliedBy(1.1),
-                            refit.getCost());
+        // Cost?
+        assertEquals(Money.of(316000).multipliedBy(1.1),
+              refit.getCost());
 
-            // We're removing 1 Large Laser and using existing armor in 10 locations
-            List<Part> removedParts = refit.getOldUnitParts();
-            assertEquals(9, removedParts.size());
-            assertEquals(2, removedParts.stream()
-                            .filter(p -> (p instanceof EquipmentPart) && p.getName().equals("ER Large Laser"))
-                            .count());
-            assertEquals(0, removedParts.stream().filter(p -> (p instanceof Armor)).count());
+        // We're removing 1 Large Laser and using existing armor in 10 locations
+        List<Part> removedParts = refit.getOldUnitParts();
+        assertEquals(9, removedParts.size());
+        assertEquals(2, removedParts.stream()
+                              .filter(p -> (p instanceof EquipmentPart) && p.getName().equals("ER Large Laser"))
+                              .count());
+        assertEquals(0, removedParts.stream().filter(p -> (p instanceof Armor)).count());
 
-            // All of the new parts should be from the old unit
-            List<Part> newParts = refit.getNewUnitParts();
-            assertTrue(newParts.stream().allMatch(p -> p.getUnit().equals(oldUnit)));
+        // All the new parts should be from the old unit
+        List<Part> newParts = refit.getNewUnitParts();
+        assertTrue(newParts.stream().allMatch(p -> p.getUnit().equals(oldUnit)));
 
-            // We need to buy:
-            // - 1 clan gauss rifle with 2 ammo bins,
-            // - 3 ER medium lasers,
-            // - 1 ER small laser,
-            // - 2 SRM-6 launchers sharing 5 Narc-capable ammo bins,
-            // - 1 NARC launcher with 1 ton of pods
-            List<Part> shoppingCart = refit.getShoppingList();
-            assertEquals(1, shoppingCart.stream()
-                            .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("Gauss Rifle"))
-                            .count());
-            assertEquals(2, shoppingCart.stream()
-                            .filter(p -> (p instanceof AmmoBin)
-                                            && p.getName().equals("Gauss Rifle Ammo [Clan] Bin"))
-                            .count());
-            assertEquals(3, shoppingCart.stream()
-                            .filter(p -> (p instanceof MissingEquipmentPart)
-                                            && p.getName().equals("ER Medium Laser"))
-                            .count());
-            assertEquals(1, shoppingCart.stream()
-                            .filter(p -> (p instanceof MissingEquipmentPart)
-                                            && p.getName().equals("ER Small Laser"))
-                            .count());
-            assertEquals(2, shoppingCart.stream()
-                            .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("SRM 6"))
-                            .count());
-            assertEquals(5, shoppingCart.stream()
-                            .filter(p -> (p instanceof AmmoBin)
-                                            && p.getName().equals("SRM 6 (Clan) Narc-capable Ammo Bin"))
-                            .count());
-            assertEquals(1, shoppingCart.stream()
-                            .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("Narc"))
-                            .count());
-            assertEquals(1, shoppingCart.stream()
-                            .filter(p -> (p instanceof AmmoBin) && p.getName().equals("Narc Pods Bin"))
-                            .count());
+        // We need to buy:
+        // - 1 clan gauss rifle with 2 ammo bins,
+        // - 3 ER medium lasers,
+        // - 1 ER small laser,
+        // - 2 SRM-6 launchers sharing 5 Narc-capable ammo bins,
+        // - 1 NARC launcher with 1 ton of pods
+        List<Part> shoppingCart = refit.getShoppingList();
+        assertEquals(1, shoppingCart.stream()
+                              .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("Gauss Rifle"))
+                              .count());
+        assertEquals(2, shoppingCart.stream()
+                              .filter(p -> (p instanceof AmmoBin)
+                                                 && p.getName().equals("Gauss Rifle Ammo [Clan] Bin"))
+                              .count());
+        assertEquals(3, shoppingCart.stream()
+                              .filter(p -> (p instanceof MissingEquipmentPart)
+                                                 && p.getName().equals("ER Medium Laser"))
+                              .count());
+        assertEquals(1, shoppingCart.stream()
+                              .filter(p -> (p instanceof MissingEquipmentPart)
+                                                 && p.getName().equals("ER Small Laser"))
+                              .count());
+        assertEquals(2, shoppingCart.stream()
+                              .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("SRM 6"))
+                              .count());
+        assertEquals(5, shoppingCart.stream()
+                              .filter(p -> (p instanceof AmmoBin)
+                                                 && p.getName().equals("SRM 6 (Clan) Narc-capable Ammo Bin"))
+                              .count());
+        assertEquals(1, shoppingCart.stream()
+                              .filter(p -> (p instanceof MissingEquipmentPart) && p.getName().equals("Narc"))
+                              .count());
+        assertEquals(1, shoppingCart.stream()
+                              .filter(p -> (p instanceof AmmoBin) && p.getName().equals("Narc Pods Bin"))
+                              .count());
 
-            // We should have 0 points of standard armor on order
-            assertNull(refit.getNewArmorSupplies());
-        }
+        // We should have 0 points of standard armor on order
+        assertNull(refit.getNewArmorSupplies());
+    }
 }
